Got basic modal setup for email, added body !important css to prevent scroll bar jump when modal is opened

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body {
+  overflow: auto !important;
+}
+
 #portfolioContainer {
   width: 90%;
   margin: 0 auto;
@@ -47,6 +51,17 @@
 #floating_hamburger {
   top: 45px; 
   right: 24px;
+}
+
+.clicked {
+  transform: rotate(90deg);
+  transition: all 0.5s;
+  /* transition-timing-function: cubic-bezier(0.2, 1.2, 0.58, 1); */
+}
+
+.unclicked {
+  transition: all 0.5s;
+  /* transition-timing-function: cubic-bezier(0.2, 1.2, 0.58, 1); */
 }
 
 @media only screen and (max-width: 400px) {
